--- a/README
+++ b/README
@@ -56,8 +56,8 @@ FEATURES:
 * Exporting database (plain text)
 * Creating database backups (encoded)
 * Importing database (from encoded backups or plain text exports)
+* Not show passwords when writing them
 
 FUTURE FEATURES:
 * Mix two database
 * Better security (user authentication)
-* Better security: not show passwords when writing them
