Added: email field

--- a/README
+++ b/README
@@ -11,7 +11,7 @@ The database that passwords manager uses is created in the folder
 It's a plain text encoded. It is NOT a strong encoding and could be decoded
 by anyone with basic knowledge, but it prevents other people from reading all
 your data.
-Also, version 0.1 still doesn't require the user to be identified to change or
+Also, this version still doesn't require the user to be identified to change or
 access the database using the program.
 With all the above explained, this is NOT a recommended program if you want to
 hide important passwords (i.e. bank accounts) but it is better than storing
@@ -43,7 +43,7 @@ want to edit an entry you'll have to remove it first and then add a new one
 * If you import a damaged file (i.e. that doesn't follow the program syntax)
 it will cause some problems and it should be removed
 * If you want to create a database "by hand" you'll have to follow this
-syntax (if not it won't be readble by this program):
+syntax (if not it won't be readable by this program):
 Name of web service - Link to web service - User - Password
 
 FEATURES:
@@ -59,5 +59,8 @@ FEATURES:
 * Hide passwords when writing them
 
 FUTURE FEATURES:
+* Translate to other languages
 * Mix two databases
 * Better security (user authentication)
+* Add email field
+* Make some fields not compulsory
