--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Passwords Manager
 Author: Guillermo Gómez Fonfría
-Email: guillermo.gomezfonfria@gmail.com
+Email: guillermo.gf@openmailbox.org
 
 Passwords Manager is a command line tool that offers the possibility of
 creating a simple database to locally store your passwords so you can quickly
@@ -38,13 +38,18 @@ or:
 $ python passwords.py --help
 
 SOME TIPS
+* If you created a database using version 0.2 or a previous one of this
+  program you will have to create a new one and add one-by-one every entry or
+  adapt it to the new syntax. See the wiki in the github repository for more
+  information. <https://github.com/kakahuete/PasswordsManager/wiki>
 * The edit feature does not exits and it will probably never exist. If you
-want to edit an entry you'll have to remove it first and then add a new one
+  want to edit an entry you'll have to remove it first and then add a new one
 * If you import a damaged file (i.e. that doesn't follow the program syntax)
-it will cause some problems and it should be removed
+  it will cause some problems and it should be removed
 * If you want to create a database "by hand" you'll have to follow this
-syntax (if not it won't be readable by this program):
-Name of web service - Link to web service - User - Password
+  syntax (if not it won't be readable by this program):
+  Name of web service - Link to web service - Email - User - Password
+* If a field is not filled in it is taken as a space
 
 FEATURES:
 * Create encoded database
@@ -62,5 +67,3 @@ FUTURE FEATURES:
 * Translate to other languages
 * Mix two databases
 * Better security (user authentication)
-* Add email field
-* Make some fields not compulsory
