--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+09/03/2014  Guillermo Gómez <guillermo.gf@openmailbox.org>
+	* Removed COPYING file (had nothing to do w/ this project)
+	* Failure to add entries when db didn't exist fixed
+
 05/01/2014  Guillermo Gómez <guillermo.gf@openmailbox.org>
 	* Created file with known bugs
 	* Added 2014 to copyright notices
